src/main/kotlin/com/example/cantinabackend/web/errors/BadRequestException.kt
package io.planer.shifts.web.errors

class BadRequestException(message: String) : RuntimeException(message)